# ThesisMate

./: .env.example  .gitignore  README.md  main.py  presentation_topic_scout_research.md  pyproject.toml  test_complete_workflow.py  test_multi_agent_orchestrator.py  test_topic_scout_integration.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
cline-docs/: agent-tool-architecture.md  conversation-summary.md  implementation-tasks.md  research-topic-scout-plan.md  simple-implementation-guide.md  topic-scout-workflow-simple.md  updated-implementation-plan.md
data/: papers.json  papers_ai_in_healthcare.json  papers_machine_learning.json  papers_neural_networks.json  papers_please_topic_evaluation_for_ai_in_healthcare.json  papers_topic_evaluation_for_ai_in_healthcare.json
data/thesis/config/: style.json
data/thesis/guardrails/: ai.md  structure.md  style_rules.md
data/thesis/outline/: ai-in-healthcare.json  (+3 more)
specs/001-create-a-base/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/agents/: research.py  reviewer.py  structure.py  test.py  topic_scout.py  writing.py
src/models/: models.py
src/orchestrator/: orchestrator.py
src/ui/: app.py
src/utils/: GoogleCalendarSetup.md  academic_apis.py  config.py  gemini_client.py  github_client.py  github_lookup.py  google_reminder.py  local_lookup.py  logging.py  openrouter_client.py  parsers.py  storage.py  style_store.py
tests/: test_orchestrator.py
thesis/: ai_in_healthcare_intro.md  my_thesis.md  style.json
thesis/guardrails/: formatting.md
(+9 files in other folders)
