[project]
name = "thesismate"
version = "0.1.0"
description = "A multi-agent system for assisting with thesis writing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chainlit>=2.0.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.9",
    "langchain-core>=0.3.76",
    "langgraph>=0.6.7",
    "requests>=2.31.0",
    "langchain-openai>=0.1.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
